[EWL-5310] Add the two-up section and fix spacing

--- a/styleguide/source/assets/scss/05-pages/_category.scss
+++ b/styleguide/source/assets/scss/05-pages/_category.scss
@@ -65,13 +65,41 @@
 
   .ama__article-stub--category .ama__h5 {
     @include breakpoint($bp-small max-width) {
-      @include gutter($padding-all-full...);
+      padding-left: $gutter-mobile;
     }
   }
 
   .ama__category__jama--as--sidebar {
     .ama__link--with-image a .ama__image__text {
       padding: 0;
+    }
+  }
+
+  &__article-stub-two-up {
+    @include breakpoint($bp-small) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: auto auto;
+      grid-column-gap: $gutter;
+      grid-row-gap: $gutter;
+
+      .ama__content-grouping-header {
+        grid-row: 1 / 1;
+      }
+
+      .ama__article-stub {
+        grid-row: 2 / 2;
+      }
+    }
+  }
+
+  .ama__subcategory-featured-content-as-carousel {
+    overflow: hidden;
+  }
+
+  .ama__subcategory-featured-content .grid-container {
+    @include breakpoint($bp-small) {
+      padding: $gutter / 2;
     }
   }
 }
